--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>my_todo_app</title>
+  <title>Dhruv Rajput</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
